<resources>
    <string name="app_name">Kalkulator BMI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aboutFragment">Info Aplikasi</string>
    <string name="bmi_intro">BMI, atau Body Mass Index merupakan cara untuk menentukan apakah berat badanmu ideal atau tidak. Cobalah sekarang!</string>
    <string name="beratb">Berat Badan (Kg)</string>
    <string name="tinggib">Tinggi Badan (cm)</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hitung">Hitung</string>
    <string name="hasil" />
    <string name="kategori" />
    <string name="saran">Lihat Saran</string>
    <string name="bagikan">Bagikan</string>
    <string name="nim">6706180126</string>
    <string name="nama">Nuril febri setiyawan</string>
    <string name="kelas">D3IF 42-03</string>
</resources>
